# Automat

./: CMakeLists.txt  README.md  clear.c  dArray.c  dArray.h  helper.c  helper.h  in1  in2  run.c  tester.c  validator.c
